# type-erasure

./: README.md
rule_engine_boost_te/: Makefile  rule_engine.cpp  rule_engine.h
rule_engine_memory/: CMakeLists.txt  clone_memory_model.h  condition.h  enable_move_type.h  main.cpp  memory_model.h  remove_rcv.h  rule_engine_test.kdev4  shared_memory_model.h  test_shared.cpp  unique_memory_model.h
rule_engine_memory/.kdev4/: rule_engine_test.kdev4
rule_engine_self/: Makefile  condition.h  condition_factory.h  consequence.h  generic_conditions.h  main.cpp  rule.h  test_condition.cpp  test_consequence.cpp
